--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,8 @@ input {
   margin-right: 10px;
   padding: 10px;
   width: 200px;
-  font-size: 28px;
-  transform: translateY(3px);
+  font-size: 16px;
+  /* transform: translateY(3px); */
   border: 1px solid #646cff;
   border-radius: 8px;
 }
